finished OAuth task
